tambah menu profile dan revisi code

--- a/addwisata.html
+++ b/addwisata.html
@@ -8,19 +8,18 @@
 </head>
 <body>
     <nav>
-        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
+        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Event</a></li>
             <li><a href="#">Booking</a></li>
             <li><a class="klik" href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <table>
         <div class="masukkangambar">
             <tr id="masukkan gambar">
-                <th rowspan="5" colspan="3">Masukkan gambar</th>
+                <th rowspan="5" colspan="3"><input type="file" name="masukkangambar" id="masukkangambar"></th>
             </tr>
         </div>
         <tr>
