--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <li><a class="klik" href="#">Home</a></li>
             <li><a href="#">Booking</a></li>
             <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="homeatas">
