--- a/login 1.html
+++ b/login 1.html
@@ -23,12 +23,12 @@
             </div>
             <br>
             <div class="form-control">
-                <button type="submit">Log In</button>
+                <button type="submit"><a class="klik" href="home.html">Log In</a></button>
             </div>
             <br>
             <br>
             <div class="sign-up">
-                <button type="submit">Don't Have an Account? Sign up</button>
+                <button type="submit">Don't Have an Account? <a class="klik" href="sign up.html">Sign Up</a></button>
             </div>
         </form>
     </div>  
