--- a/sign up.html
+++ b/sign up.html
@@ -20,7 +20,7 @@
             <br>
             <br>
             <div class="sign-up">
-                <button type="submit">Do Have an Account? Sign In</button>
+                <button type="submit">Do Have an Account? <a class="klik" href="login 1.html">Sign In</a></button>
             </div>
         </form>
     </div>  
