revisi code dan tambahan footer, link belum selesai

--- a/addwisata.html
+++ b/addwisata.html
@@ -10,9 +10,9 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Booking</a></li>
-            <li><a class="klik" href="#">Profile</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="alam.html">Booking</a></li>
+            <li><a class="klik" href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
@@ -60,7 +60,7 @@
         <tr>
             <td colspan="6">
                 <div class="tombol">
-                    <button type="submit">Simpan</button>
+                    <a href="#"><button type="submit">Simpan</button></a>
                 </div>
             </td>
         </tr>
