--- a/budaya.html
+++ b/budaya.html
@@ -10,10 +10,10 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a class="klik" href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a class="klik" href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="atas">
@@ -30,80 +30,107 @@
     </div>
     <h2>DESTINASI</h2>
     <div class="bot">
-        <div class="museum1">
-            <div class="angkutmalang">
-                <img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
+        <div class="budaya1">
+            <a class="klikgambar" href=""><div class="kemiren">
+                <img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum Angkut Malang <br>
+                        Desa Kemiren<br>
                         Rp500.000
                     </p>
                 </div>
-            </div>
-            <div class="satwa">
-                <img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
+            </div></a>
+            <a class="klikgambar" href=""><div class="jono">
+                <img src="Gambar Mlakujatim/desa jono.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum Satwa <br>
+                        Desa Jono<br>
                         Rp600.000
                     </p>
                 </div>
-            </div>
-            <div class="brawijaya">
-                <img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
+            </div></a>
+            <a class="klikgambar" href=""><div class="bumiaji">
+                <img src="Gambar Mlakujatim/desa bumiaji.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum Brawijaya <br>
+                        Desa Bumiaji<br>
                         Rp600.000
                     </p>
                 </div>
-            </div>
-            <div class="tantular">
-                <img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
+            </div></a>
+            <a class="klikgambar" href=""><div class="tengger">
+                <img src="Gambar Mlakujatim/desa tengger, bromo.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum Mpu Tantular <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div>
-        </div> 
-        <div class="museum2">
-            <div class="trisula">
-                <img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Trisula <br>
-                        Rp500.000
-                    </p>
-                </div>
-            </div>
-            <div class="karno">
-                <img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
-                <div class="container">
-                    <p>
-                        Museum Bung Karno <br>
+                        Desa Tengger <br>
                         Rp400.000
                     </p>
                 </div>
-            </div>
-            <div class="november10">
-                <img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
+            </div></a>
+        </div> 
+        <div class="budaya2">
+            <a class="klikgambar" href=""><div class="kaliandra">
+                <img src="Gambar Mlakujatim/desa kaliandra.png" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum 10 November <br>
+                        Desa Kaliandra <br>
+                        Rp600.000
+                    </p>
+                </div>
+            </div></a>
+            <a class="klikgambar" href=""><div class="ngrayudan">
+                <img src="Gambar Mlakujatim/desa wisata ngrayudan.jpg" alt="budaya"><br>
+                <div class="container">
+                    <p>
+                        Desa Wisata Ngrayudan <br>
                         Rp500.000
                     </p>
                 </div>
-            </div>
-            <div class="tubuh">
-                <img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
+            </div></a>
+            <a class="klikgambar" href=""><div class="osing">
+                <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
-                        Museum Tubuh Batu <br>
+                        Desa Wisata Osing <br>
                         Rp500.000
                     </p>
                 </div>
+            </div></a>
+            <a class="klikgambar" href=""><div class="kerapansapi">
+                <img src="Gambar Mlakujatim/kerapan sapi.jpg" alt="budaya"><br>
+                <div class="container">
+                    <p>
+                        Kerapan Sapi<br>
+                        Rp400.000
+                    </p>
+                </div>
+            </div></a>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="simbol">
+            <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
+            <p><i>Jalan-Jalan di Jawa Timur</i></p>
+        </div>
+        <div class="bagi2">
+            <div class="definisi">
+                <p>Mlakujatim merupakan website pariwisata yang <br>
+                    mencakup daerah Jawa Timur. Turis dapat <br>
+                    melihat tempat-tempat pariwisata yang populer <br>
+                    serta jika ada masyarakat Jawa Timur ingin <br>
+                    menambahkan tempat pariwisata daerah mereka <br>
+                    dan menjadi guide tour dalam rencana wisata <br>
+                    yang telah mereka daftarkan.
+                </p>
+            </div>
+            <div class="flexfooter">
+                <div class="link">
+                    <p>Follow Us:</p><br>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                    <p>www.mlakujatim.com</p>
+                <div class="link">
             </div>
         </div>
     </div>
