--- a/home.html
+++ b/home.html
@@ -10,17 +10,16 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a class="klik" href="#">Home</a></li>
-            <li><a href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a class="klik" href="home.html">Home</a></li>
+            <li><a href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="homeatas">
-        <h1>JALAN JALAN <br>
-            DI JAWA TIMUR
-        </h1>
-        <a id="pesan" href="#"><h3>PESAN</h3></a>
+        <h1 id="jalanjalan">JALAN JALAN </h1>
+        <h1 id="jatim">DI JAWA TIMUR</h1>
+        <a id="pesan" href="#bot"><h3>PESAN</h3></a>
     </div>
     <h2>Info Covid-19</h2>
     <div class="covid">
@@ -40,7 +39,7 @@
                 3.500</h5>
         </div>
     </div>
-    <div class="bot">
+    <div id="bot" class="bot">
         <h4 class="subhome">DESTINASI POPULER</h4>
         <div class="museum1">
             <div class="angkutmalang">
@@ -53,29 +52,29 @@
                 </div></a>
             </div>
             <div class="satwa">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt=""><br>
                 <div class="container">
                     <p>
-                        Museum Satwa <br>
+                        Pantai Kenjeran <br>
                         Rp600.000
                     </p>
                 </div></a>
             </div>
             <div class="brawijaya">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
-                        Museum Brawijaya <br>
-                        Rp600.000
+                        Pantai Balekambang <br>
+                        Rp500.000
                     </p>
                 </div></a>
             </div>
             <div class="tantular">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
-                        Museum Mpu Tantular <br>
-                        Rp500.000
+                        Taman Nasional Baluran <br>
+                        Rp700.000
                     </p>
                 </div></a>
             </div>
@@ -91,28 +90,28 @@
                 </div></a>
             </div>
             <div class="karno">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/desa kaliandra.png" alt="museum"><br>
                 <div class="container">
                     <p>
-                        Museum Bung Karno <br>
-                        Rp400.000
+                        Desa Kaliandra <br>
+                        Rp600.000
                     </p>
                 </div></a>
             </div>
             <div class="november10">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
-                        Museum 10 November <br>
-                        Rp500.000
+                        Ranu Kumbolo <br>
+                        Rp600.000
                     </p>
                 </div></a>
             </div>
             <div class="tubuh">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
+                <a class="hold" href="#"><img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
-                        Museum Tubuh Batu <br>
+                        Desa Kemiren <br>
                         Rp500.000
                     </p>
                 </div></a>
@@ -122,13 +121,11 @@
     <div class="video">
         <h4 class="subhome">VIDEO SINGKAT</h4>
         <video width="240" height="180" controls>
-            <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
+            <source src="Gambar Mlakujatim/y2mate.com - Bromo-Tengger-Semeru National Park, Indonesia in 4K (Ultra HD)_480p.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <video id="vid2" width="240" height="180" controls>
-            <source src="movie.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
+            <source src="Gambar Mlakujatim/y2mate.com - Ranu kumbolo adventure with canon M5_480p.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
     </div>
@@ -155,7 +152,7 @@
                         liburan maka ada banyak sekali tempat...
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="blitar">
                 <h5>19 Wisata Sejarah di Blitar yang Wajib <br> Dikunjungi</h5>
@@ -207,14 +204,31 @@
         </div>
     </div>
     <div class="footer">
-        <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
-        <p><i>Jalan-Jalan di Jawa Timur</i></p>
-        <div class="flexfooter">
-            <img src="Gambar Mlakujatim/facebook.png" alt="">
-            <img src="Gambar Mlakujatim/browser.png" alt="">
-            <img src="Gambar Mlakujatim/ig.png" alt="">
+        <div class="simbol">
+            <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
+            <p><i>Jalan-Jalan di Jawa Timur</i></p>
         </div>
-        <label for="web" id="web">www.mlakujatim.com</label> 
+        <div class="bagi2">
+            <div class="definisi">
+                <p>Mlakujatim merupakan website pariwisata yang <br>
+                    mencakup daerah Jawa Timur. Turis dapat <br>
+                    melihat tempat-tempat pariwisata yang populer <br>
+                    serta jika ada masyarakat Jawa Timur ingin <br>
+                    menambahkan tempat pariwisata daerah mereka <br>
+                    dan menjadi guide tour dalam rencana wisata <br>
+                    yang telah mereka daftarkan.
+                </p>
+            </div>
+            <div class="flexfooter">
+                <div class="link">
+                    <p>Follow Us:</p><br>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                    <p>www.mlakujatim.com</p>
+                <div class="link">
+            </div>
+        </div>
     </div>
 </body>
 </html>
