--- a/profile.html
+++ b/profile.html
@@ -10,19 +10,19 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Booking</a></li>
-            <li><a class="klik" href="#">Profile</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="alam.html">Booking</a></li>
+            <li><a class="klik" href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="profile">
         <img src="Gambar Mlakujatim/fotoprofil.png" alt="fotoprofil">
         <div class="namalengkap">
-            <p>Aula Fajrun Khalilurahman</p>
+            <p>Gino Gilang Kurniawan</p>
         </div>
         <div class="profilelain">
-            <p>17 September 2000</p><hr>
+            <p>29 Juni 2001</p><hr>
             <br>
             <p>Kampung Barat Asembagus, Situbondo, Jawa Timur</p><hr>
             <br>
