--- a/sign up.html
+++ b/sign up.html
@@ -15,7 +15,7 @@
                 <input type="text" placeholder="Mobile Number or Email">
             </div>
             <div class="form-control">
-                <button type="submit">Continue</button>
+                <a href="form pweb.html"><button type="submit">Continue</button></a>
             </div>
             <br>
             <br>
