--- a/form pweb.html
+++ b/form pweb.html
@@ -42,7 +42,7 @@
                     </div>
                     <br>
                     <div class="konfirmasi">
-                        <label for="konfirmasi">Comfirm Password</label><br>
+                        <label for="konfirmasi">Confirm Password</label><br>
                         <input type="password" id="konfirmasi" name="konfirmasi" placeholder="confirm password">
                     </div>
                     <br>
