--- a/museum.html
+++ b/museum.html
@@ -10,10 +10,10 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a class="klik" href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a class="klik" href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="atas">
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="museum1">
-            <div class="angkutmalang">
+            <a class="klikgambar" href=""><div class="angkutmalang">
                 <img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -39,8 +39,8 @@
                         Rp500.000
                     </p>
                 </div>
-            </div>
-            <div class="satwa">
+            </div></a>
+            <a class="klikgambar" href=""><div class="satwa">
                 <img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
                 <div class="container">
                     <p>
@@ -48,8 +48,8 @@
                         Rp600.000
                     </p>
                 </div>
-            </div>
-            <div class="brawijaya">
+            </div></a>
+            <a class="klikgambar" href=""><div class="brawijaya">
                 <img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -57,8 +57,8 @@
                         Rp600.000
                     </p>
                 </div>
-            </div>
-            <div class="tantular">
+            </div></a>
+            <a class="klikgambar" href=""><div class="tantular">
                 <img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -66,10 +66,10 @@
                         Rp500.000
                     </p>
                 </div>
-            </div>
+            </div></a>
         </div> 
         <div class="museum2">
-            <div class="trisula">
+            <a class="klikgambar" href=""><div class="trisula">
                 <img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -77,8 +77,8 @@
                         Rp500.000
                     </p>
                 </div>
-            </div>
-            <div class="karno">
+            </div></a>
+            <a class="klikgambar" href=""><div class="karno">
                 <img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -86,8 +86,8 @@
                         Rp400.000
                     </p>
                 </div>
-            </div>
-            <div class="november10">
+            </div></a>
+            <a class="klikgambar" href=""><div class="november10">
                 <img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -95,8 +95,8 @@
                         Rp500.000
                     </p>
                 </div>
-            </div>
-            <div class="tubuh">
+            </div></a>
+            <a class="klikgambar" href=""><div class="tubuh">
                 <img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -104,6 +104,33 @@
                         Rp500.000
                     </p>
                 </div>
+            </div></a>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="simbol">
+            <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
+            <p><i>Jalan-Jalan di Jawa Timur</i></p>
+        </div>
+        <div class="bagi2">
+            <div class="definisi">
+                <p>Mlakujatim merupakan website pariwisata yang <br>
+                    mencakup daerah Jawa Timur. Turis dapat <br>
+                    melihat tempat-tempat pariwisata yang populer <br>
+                    serta jika ada masyarakat Jawa Timur ingin <br>
+                    menambahkan tempat pariwisata daerah mereka <br>
+                    dan menjadi guide tour dalam rencana wisata <br>
+                    yang telah mereka daftarkan.
+                </p>
+            </div>
+            <div class="flexfooter">
+                <div class="link">
+                    <p>Follow Us:</p><br>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                    <p>www.mlakujatim.com</p>
+                <div class="link">
             </div>
         </div>
     </div>
