--- a/profile.html
+++ b/profile.html
@@ -39,5 +39,32 @@
             <a class="jejak" href="addwisata.html"><button>Tambah tempat pariwisata</button></a>
         </div>
     </div>
+    <div class="footer">
+        <div class="simbol">
+            <label class="footer1">Mlaku</label><label class="footer2">jatim</label>
+            <p><i>Jalan-Jalan di Jawa Timur</i></p>
+        </div>
+        <div class="bagi2">
+            <div class="definisi">
+                <p>Mlakujatim merupakan website pariwisata yang <br>
+                    mencakup daerah Jawa Timur. Turis dapat <br>
+                    melihat tempat-tempat pariwisata yang populer <br>
+                    serta jika ada masyarakat Jawa Timur ingin <br>
+                    menambahkan tempat pariwisata daerah mereka <br>
+                    dan menjadi guide tour dalam rencana wisata <br>
+                    yang telah mereka daftarkan.
+                </p>
+            </div>
+            <div class="flexfooter">
+                <div class="link">
+                    <p>Follow Us:</p><br>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/facebook.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/browser.png" alt=""></a>
+                    <a class="sosmed" href="#"><img src="Gambar Mlakujatim/ig.png" alt=""></a>
+                    <p>www.mlakujatim.com</p>
+                <div class="link">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
