--- a/pemesanan.html
+++ b/pemesanan.html
@@ -19,6 +19,9 @@
     <div class="atas">
         <div class="judul">
             <h1>PANTAI WOTU OLU</h1>
+            <div class="wilayah">
+                <p>Sumberrejo, Ambulu</p>
+            </div>
         </div>
         <div class="penjelasan">
             <p>
@@ -30,7 +33,7 @@
     <div class= "bawah">
         <div class="deskripsi">
             <p>
-                deskripsi :
+                <b>deskripsi :</b>
             </p>
             <br>
             <p>
@@ -39,7 +42,7 @@
         </div>
         <div class="tambahan">
             <p>
-                Paket tambahan :
+                <b>Paket tambahan :</b>
             </p>
             <p>
             - Penginapan 2 malam
@@ -54,7 +57,7 @@
         </div>
         <div class="paket">
             <p>
-                Diluar paket :
+                <b>Diluar paket :</b>
             </p>
             <p>
             - Makanan selain yang telah disediakan
@@ -62,7 +65,7 @@
             - Perjalanan selain yang telah ditentukan
             </p>
             <p>
-                Transportasi :
+                <b>Transportasi :</b>
             </p>
             <p>
                 Ada,
