--- a/pemesanan.html
+++ b/pemesanan.html
@@ -62,7 +62,7 @@
             <p>
             - Makanan selain yang telah disediakan
             <br>
-            - Perjalanan selain yang telah ditentukan
+            - Perjalanan selain yang sudah ditentukan
             </p>
             <p>
                 <b>Transportasi :</b>
