--- a/artikel.html
+++ b/artikel.html
@@ -10,10 +10,10 @@
     <nav>
         <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
-            <li><a class="klik" href="#">Home</a></li>
-            <li><a href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a class="klik" href="home.html">Home</a></li>
+            <li><a href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="artikel">
