--- a/editpass.html
+++ b/editpass.html
@@ -21,7 +21,7 @@
             <p style="font-size: 20px;">Dewa Gembel</p>
             <img src="Gambar Mlakujatim/fotoprofil.png" alt=""><br>
             <input type="file" name="file" id="file"><br>
-            <a class="perbarui" href="#"><p>Simpan foto profil</p></a>
+            <a class="perbarui" href="edit akun.html"><p>Simpan foto profil</p></a>
             <br><br>
         </div>
         <div class="aturakun">
@@ -33,7 +33,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -47,7 +47,7 @@
                 <input type="text" id="masukkanpass" placeholder=" Masukkan password baru"><br>
                 <p>Konfirmasi password</p>
                 <input type="text" id="masukkanpass" placeholder=" Masukkan password lama">
-                <a class="perbarui" href="#"><button type="submit">simpan</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">simpan</button></a>
             </div>
             <div class="verifikasi">
                 <div class="namabagianatas">
@@ -63,11 +63,11 @@
                 <div class="namabagianatas">
                     <img src="Gambar Mlakujatim/nomorhp.png" alt="">
                     <p>Nomor hp</p>
-                    <a class="perbarui" href="#"><p class="ubah">+</p></a>
+                    <a class="perbarui" href="editnomor.html"><p class="ubah">+</p></a>
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -76,7 +76,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
