--- a/form pweb.html
+++ b/form pweb.html
@@ -77,7 +77,7 @@
                     </div>
                     <br>
                     <div class="tombol">
-                        <button type="submit">Buat Akun</button>
+                        <button type="submit"><a class="akun" href="login 1.html"> Buat Akun</a></button>
                     </div>
                 </div>               
             </table>
