--- a/edit akun.html
+++ b/edit akun.html
@@ -18,10 +18,10 @@
     </nav>
     <div class="editakun">
         <div class="fotoprofil">
-            <p style="font-size: 20px;">Dewa Gembel</p>
+            <p style="font-size: 20px;">Gino Gilang Kurniawan</p>
             <img src="Gambar Mlakujatim/fotoprofil.png" alt=""><br>
             <input type="file" name="file" id="file"><br>
-            <a class="perbarui" href="#"><p>Simpan foto profil</p></a>
+            <a class="perbarui" href="edit akun.html"><p>Simpan foto profil</p></a>
             <br><br>
         </div>
         <div class="aturakun">
@@ -33,7 +33,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -62,7 +62,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor hp">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -71,7 +71,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
