--- a/editnomor.html
+++ b/editnomor.html
@@ -21,7 +21,7 @@
             <p style="font-size: 20px;">Dewa Gembel</p>
             <img src="Gambar Mlakujatim/fotoprofil.png" alt=""><br>
             <input type="file" name="file" id="file"><br>
-            <a class="perbarui" href="#"><p>Simpan foto profil</p></a>
+            <a class="perbarui" href="edit akun.html"><p>Simpan foto profil</p></a>
             <br><br>
         </div>
         <div class="aturakun">
@@ -33,7 +33,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -58,13 +58,13 @@
                 <div class="namabagianatas">
                     <img src="Gambar Mlakujatim/nomorhp.png" alt="">
                     <p>Nomor hp</p>
-                    <a class="perbarui" href="#"><p class="ubah">+</p></a>
+                    <a class="perbarui" href="editnomor.html"><p class="ubah">+</p></a>
                 </div>
                 <hr><br>
                 <p id="bintang">0895705502360</p><br>
                 <p>Nomor telepon</p>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor">
-                <a class="perbarui" href="#"><button type="submit">simpan</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">simpan</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -73,7 +73,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="#"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
