--- a/metodebyr.html
+++ b/metodebyr.html
@@ -10,15 +10,15 @@
     <nav>
         <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a class="klik" href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a class="klik" href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="atas">
         <div class="judul">
-            <h1>PANTAI WOTU OLU</h1>
+            <h1>PANTAI WATU ULO</h1>
         </div>
         <div class="transaksi">
             <div class="tgl">
