--- a/pemesanan.html
+++ b/pemesanan.html
@@ -10,10 +10,10 @@
     <nav>
         <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a class="klik" href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a id="login" href="#">Login</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a class="klik" href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
     <div class="atas">
@@ -33,7 +33,7 @@
     <div class= "bawah">
         <div class="deskripsi">
             <p>
-                <b>deskripsi :</b>
+                <b>Deskripsi :</b>
             </p>
             <br>
             <p>
