--- a/sign up.html
+++ b/sign up.html
@@ -15,12 +15,12 @@
                 <input type="text" placeholder="Mobile Number or Email">
             </div>
             <div class="form-control">
-                <a href="form pweb.html"><button type="submit">Continue</button></a>
+                <button type="submit"><a class="lanjutan" href="form pweb.html">Continue</a></button>
             </div>
             <br>
             <br>
             <div class="sign-up">
-                <button type="submit">Do Have an Account? <a class="klik" href="login 1.html">Sign In</a></button>
+                <button type="submit">Do Have an Account? <a class="lanjutan" href="login 1.html">Sign In</a></button>
             </div>
         </form>
     </div>  
